# robpy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pypi_uuid.txt  pyproject.toml
.github/workflows/: check_black_format.yaml  check_flake8.yaml  publish.yaml  run_tests.yaml  tests.yaml
demo_notebooks/: cellmcd.ipynb  covariance.ipynb  pca.ipynb  regression.ipynb  topgear.ipynb
docs/source/: conf.py  examples.rst  index.rst  installation.rst
docs/source/api/: index.rst  robpy.datasets.rst  robpy.outliers.rst  robpy.pca.rst  robpy.preprocessing.rst  robpy.regression.rst  (+3 more)
robpy/: kladjeQn.py  preprocessing.py  topgear_cellMCD.txt  topgear_cellMCD_rownames.txt  utils.py  voorbeeld.py  voorbeeldje.py
robpy/covariance/: __init__.py  base.py  cellmcd.py  initial_ddcw.py  kendall.py  mcd.py  ogk.py  wrapping.py
robpy/datasets/: __init__.py  _base.py  base.py
robpy/outliers/: __init__.py  ddc.py
robpy/pca/: __init__.py  base.py  robpca.py  spca.py
robpy/preprocessing/: __init__.py  checkDataset.py  check_dataset.py  data_cleaner.py  scaling.py  transfo.py  utils.py
robpy/regression/: __init__.py  base.py  lts.py  mm.py  mm_estimator.py  s.py  s_estimator.py
robpy/univariate/: Qn.py  __init__.py  adjusted_boxplot.py  base.py  huber_Mest  hubers_m_est.py  mcd.py  onestep_m.py  qn.py  tau.py  univariateMCD.py
robpy/utils/: distance.py  general.py  l1median.py  logging.py  median.py  outlyingness.py  rho.py  visualization.py  weighted_median.py
robpy/visualization/: __init__.py  adjusted_boxplot.py
scripts/: cellmcd.py  paper_plots.py  topgear.py
tests/covariance/: test_base.py  test_cellmcd.py  test_detmcd.py  test_fastmcd.py  test_kendall_covariance.py  test_ogk.py  test_wrapping_covariance.py
tests/datasets/: test_data_loading.py
tests/dummy/: test_dummy.py
tests/outliers/: test_ddc.py
tests/pca/: test_robpca.py  test_spca.py
tests/preprocessing/: test_check_dataset.py  test_robust_scaler.py  test_transfo.py  test_wrapping_transformation.py
tests/regression/: test_lts.py  test_mm_estimator.py  test_s_estimator.py
tests/univariate/: test_Qn.py  test_adjusted_boxplot.py  test_mcd.py  test_qn.py  test_tau.py  test_univariateMCD.py  test_univariate_mcd.py
tests/utils/: test_mahalanobis.py  test_stahel_donoho.py
tests/visualization/: test_adjusted_boxplot.py
(+15 files in other folders)
