[tool.poetry]
name = "robpy"
version = "0.1.0"
description = ""
authors = ["Thomas Decorte <thomas.decorte@uantwerpen.be>", "Thomas Servotte <servottethomas@gmail.com>", ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = ">=1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
