[tool.poetry]
name = "robpy"
version = "0.1.0"
description = ""
authors = ["Thomas Decorte <thomas.decorte@uantwerpen.be>", "Thomas Servotte <servottethomas@gmail.com>", ]
readme = "README.md"

[tool.black]
line-length = 100
exclude = ".ipynb"

[tool.flake8]
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
]
per-file-ignores = [
    '__init__.py:F401',
]
max-complexity = 10
max-line-length = 100

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = ">=1.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
tqdm = "^4.66.1"
statsmodels = "^0.14.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
black = "^23.11.0"
flake8 = "^6.1.0"
jupyter = "^1.0.0"
flake8-pyproject = "^1.2.3"
nbdime = "^4.0.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
