[tool.poetry]
name = "robpy"
version = "0.1.0"
description = ""
authors = ["Thomas Servotte <servottethomas@gmail.com>", "Sarah Leyder <sarah.leyder@uantwerpen.be>"]
readme = "README.rst"

[tool.black]
line-length = 100
exclude =  '''
(
  /(
    | \.git         
    | \.venv
  )/
  | .ipynb
)
'''

[tool.flake8]
extend-ignore = "E203"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "conf.py"
]
per-file-ignores = [
    '__init__.py:F401',
]
max-complexity = 10
max-line-length = 100

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = ">=1.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
tqdm = "^4.66.1"
statsmodels = "^0.14.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
black = "^23.11.0"
flake8 = "^6.1.0"
jupyter = "^1.0.0"
flake8-pyproject = "^1.2.3"
nbdime = "^4.0.1"
ipympl = "^0.9.3"
ipykernel = "^6.29.4"
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.5"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
